# Dynamic_Learning_Model

./: .gitignore  DLM.py  DLM_Database  DLM_test.py  LICENSE  README.md  dlm_knowledge.db  setup.py
dlm/: DLM.py
dlm-ai/: DLM_test.py  README.md  pyproject.toml  setup.py
dlm-ai/dlm/: DLM.py  DLM_Compute_Model.py  DLM_Memory_Model.py  __init__.py
dynamic_learning_model.egg-info/: PKG-INFO  SOURCES.txt
